--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     margin: 0;
     padding: 0;
 }
-body{
+body{ 
     background-color: #F3F1FF;
+    font-family: 'Poppins', sans-serif;
 }
 /* header area styling */
 .nav-area{
@@ -37,33 +38,51 @@ body{
 /* main section styling */
 
 /* player section styling */
-.players-top{
-    width: 870px;
+main{
     display: flex;
     justify-content: center;
-    background-color: #FFFFFF;
-    margin: 0 auto;
-}
-.players-container {
-    display: grid;
- grid-template-columns:repeat(3, 1fr);
- grid-gap: 20px;
- margin: 20px;
- font-family: 'Poppins', sans-serif;
 }
 
-.players-title{
-font-weight: 500px;
-font-family: 'Poppins', sans-serif;
-color:#562EFF
+.players-container{
+    width: 870px;
+    background-color: #FFFFFF;
+    padding: 30px;
 }
-.players{
+
+.players-title {
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    color:#562EFF;
+    font-size: 24px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    margin-top: 30px;
+    }
+
+.players {
+    display: grid;
+ grid-template-columns:repeat(3, 1fr);
+ justify-content: center;
+ align-items:center;
+ grid-row-gap:30px;
+}
+
+.player{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap:5px;
+    align-items: left;
+    gap:16px;
 }
+
 .players-image{
     height: 56px;
     width: 56px;
 }
+.players-name{
+    font-size: 18px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 30px;
+}
+
